--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,16 +1,9 @@
 <resources>
-<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-
-         <item name="android:forceDarkAllowed">false</item>
-
-
-
+        <item name="android:forceDarkAllowed">false</item>
         <item name="android:textColor">#000000</item>
-
-        <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
-
+        <item name="colorControlNormal">#05c1c3</item>
     </style>
-
-</resources>
+</resources> 
